# DATATUI

./: .gitignore  README.md  main.ipynb  pyproject.toml  results.json  test_report.html
assets/plots/: index.html
datatui/cli/: __init__.py  main.py
datatui/cli/commands/: __init__.py  analyze.py  correlations.py  distributions.py  inspect.py  missing.py  outliers.py  report.py  schema.py  stats.py  visualize.py
datatui/cli/output/: __init__.py  console.py  tables.py  themes.py
datatui/cli/utils/: __init__.py  progress.py  spinner.py  validators.py
datatui/core/: analyzer.py  loader.py  outliers.py  schema.py  statistics.py
datatui/reports/: __init__.py  generator.py
datatui/reports/templates/: report.html
datatui/tui/: __init__.py  app.py
datatui/tui/screens/: __init__.py  correlations.py  distributions.py  missing.py  outliers.py  overview.py  schema.py  statistics.py  visualize.py
datatui/tui/styles/: main.tcss  overview.tcss
datatui/tui/widgets/: __init__.py  data_table.py  mini_chart.py  quality_bar.py  stat_card.py
datatui/visualizers/: __init__.py  plots.py  terminal.py  themes.py
src/core/: correlations.py  distributions.py  missing.py
