[project]
name = "datatui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pathlib>=1.0.1",
    "pip>=26.0.1",
    "plotext>=5.3.2",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "python-dateutil>=2.9.0.post0",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "textual>=7.5.0",
    "typer>=0.23.1",
    "xlrd>=2.0.2",
]
